Fixed Alignement issues in History display and improved support for Google Scholar Search.

--- a/exploratorySearch/prototype.css
+++ b/exploratorySearch/prototype.css
@@ -99,7 +99,7 @@ body{
 .addSearchContainer{
 	display: inline-block;
     position: relative;
-    top: -11.5px;
+    top: -11px;
 	width: 30px;
 	height: 28px;
 	margin-right: 2px;
@@ -558,7 +558,8 @@ body{
     background-color: #EDEDED;
 }
 .historyEntry.active{
-    border-width: 2px 1px 2px 2px; 
+
+    border-width: 2px 2px 2px 2px; 
     border-type: solid;
     border-color: gray;
    
@@ -573,10 +574,11 @@ body{
 	max-width: 210px;
 }
 .historyEntry.level1{
-	max-width: 352px;
+	
+	max-width: 354px;
 }
 .newEntryForm.level1{
-	   max-width: 352px;
+	   max-width: 354px;
 	
 }
 .childEntryContainer.level2{
@@ -586,10 +588,10 @@ body{
     max-width: 190px;
 }
 .historyEntry.level2{
-    max-width: 332px;
+    max-width: 334px;
 }
 .newEntryForm.level2{
-       max-width: 332px;
+       max-width: 334px;
     
 }
 .childEntryContainer.level3{
@@ -599,20 +601,20 @@ body{
     max-width: 170px;
 }
 .historyEntry.level3{
-    max-width: 312px;
+    max-width: 314px;
 }
 .newEntryForm.level3{
-       max-width: 312px;
+       max-width: 314px;
     
 }
 .childEntryContainer.level4{
     margin-left:0px;
     }
 .historyEntry.level4{
-    max-width: 292px;
+    max-width: 294px;
 }
 .newEntryForm.level4{
-       max-width: 292px;
+       max-width: 294px;
     
 }
 .compared{
